k8s/ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-tls
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - music.demo.lerzen.com
      secretName: music-lerzen
  rules:
    - host: music.demo.lerzen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music
                port:
                  number: 80
