k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: demo
spec:
  rules:
    - host: music.demo.wcxst.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: music
                port:
                  number: 80
    - host: video.demo.wcxst.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: video
                port:
                  number: 80
